--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,9 @@
 @import './base/_base.scss';
 @import './components/container';
 @import './components/_header.scss';
-
-
+@import './components/grid';
 @import './components/title';
-@import './components/img';
+@import './components/photo';
+@import './components/column1';
+@import './components/column2';
+@import './components/column3';
