--- a/src/styles/base/_setting.scss
+++ b/src/styles/base/_setting.scss
@@ -3,15 +3,17 @@ $off-black: #20222b;
 $off-white:#a5afd7;
 $blue:#3c4251;
 $light-blue:#464b5e;
-$dark-blue:#333745;
+$dark-blue:#212E3F;
 $purple:#8357c5;
+$light-gray:#CFD3D1;
+
 //spaces
 $xs-size:0.8rem;
 $s-size:1.2rem;
 $m-size:1.6rem;
 $l-size:3.2rem;
 $xl-size:4.8rem;
-$desktop-breakpoint:45rem;
+$desktop-breakpoint:100rem;
 
 
 
