--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -1,5 +1,5 @@
 .container{
-    max-width: 100rem;
+    max-width: 150rem;
     color: black;
     margin: 0 auto;
     padding: 0 ;
@@ -9,7 +9,7 @@
     
     display: grid;
   grid-column-gap: 50px;
-  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto;
   
   padding: 10px;
 }
@@ -19,6 +19,7 @@
   padding: 20px;
   text-align: center;
 }
+
 .text-area{
   padding-bottom: 20px;
   padding-top: 20px;
