--- a/src/styles/components/_title.scss
+++ b/src/styles/components/_title.scss
@@ -2,7 +2,7 @@
     font-size:150%;
     color: rgb(182, 126, 126);
     margin-bottom: $s-size;
-    padding: $l-size 0;
+    padding:  0;
     
 }
 
