make sklls and ...

--- a/src/styles/base/_setting.scss
+++ b/src/styles/base/_setting.scss
@@ -2,7 +2,7 @@
 $off-black: #20222b;
 $off-white:#a5afd7;
 $blue:#3c4251;
-$light-blue:#464b5e;
+$light-blue:#848484;
 $dark-blue:#212E3F;
 $purple:#8357c5;
 $light-gray:#CFD3D1;
