--- a/src/styles/components/_column2.scss
+++ b/src/styles/components/_column2.scss
@@ -1,3 +1,9 @@
-.gradient-box {
+.container{
+  border-bottom: 5px solid #DBDBDB;
   
-  }
+}
+
+.text-area{
+  font-size: 25px;
+  text-align: justify;
+}
