--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,8 +7,13 @@ html{
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: $m-size;
+    background-image: url('');
+    background-attachment:  fixed;
     
-      
+    
+    background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 
