--- a/src/styles/components/_column1.scss
+++ b/src/styles/components/_column1.scss
@@ -2,6 +2,7 @@
     padding: 20px 0 0 0;
     background-color: $dark-blue;
     color: $light-gray;
+    margin:30px,0,0,30px;
 }
 
 .aboutme{
@@ -21,3 +22,4 @@
     );
     
 }
+
