--- a/src/styles/components/_grid.scss
+++ b/src/styles/components/_grid.scss
@@ -1,6 +1,6 @@
 .grid-container {
   display: grid;
-  grid-template-columns: 20% 50% 20%;
+  grid-template-columns: 20px 20% 50% 20%;
   grid-gap:2%;
   padding: 0;
 }
